# Mandelbrot_CUDA

./: .gitignore  CMakeLists.txt  README.md
include/: save_image.h  utils.h  window.h
src/: CMakeLists.txt  mandel.cpp  mandel.cu  plot_smooth_polynomials.py  save_image.cpp  utils.cpp
